// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page renders 0 1`] = `
Array [
  .c0 {
  page: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`page renders function 1`] = `
Array [
  .c0 {
  page: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page: has;
}

<div
    className="c0"
  />,
  .c0 {
  page: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page: has;
}

<div
    className="c0"
  />,
]
`;

exports[`page renders invalid theme path 1`] = `
Array [
  .c0 {
  page: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`page renders negative number 1`] = `
Array [
  .c0 {
  page: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  page: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`page renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  page: July;
}

@media screen and (min-width:November) {
  .c0 {
    page: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  page: July;
}

@media screen and (min-width:November) {
  .c0 {
    page: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  page: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  page: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`page renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    page: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    page: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`page renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  page: July;
}

@media May {
  .c0 {
    page: August;
  }
}

@media April {
  .c0 {
    page: September;
  }
}

@media January {
  .c0 {
    page: November;
  }
}

@media April {
  .c0 {
    page: August;
  }
}

@media June {
  .c0 {
    page: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  page: July;
}

@media May {
  .c0 {
    page: August;
  }
}

@media April {
  .c0 {
    page: September;
  }
}

@media January {
  .c0 {
    page: November;
  }
}

@media April {
  .c0 {
    page: August;
  }
}

@media June {
  .c0 {
    page: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  page: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page: November;
  }
}

@media April {
  .c0 {
    page: January;
  }
}

@media January {
  .c0 {
    page: December;
  }
}

@media April {
  .c0 {
    page: April;
  }
}

@media June {
  .c0 {
    page: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  page: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page: November;
  }
}

@media April {
  .c0 {
    page: January;
  }
}

@media January {
  .c0 {
    page: December;
  }
}

@media April {
  .c0 {
    page: April;
  }
}

@media June {
  .c0 {
    page: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`page renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    page: July;
  }
}

@media April {
  .c0 {
    page: August;
  }
}

@media January {
  .c0 {
    page: September;
  }
}

@media April {
  .c0 {
    page: November;
  }
}

@media June {
  .c0 {
    page: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    page: July;
  }
}

@media April {
  .c0 {
    page: August;
  }
}

@media January {
  .c0 {
    page: September;
  }
}

@media April {
  .c0 {
    page: November;
  }
}

@media June {
  .c0 {
    page: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page: January;
  }
}

@media April {
  .c0 {
    page: December;
  }
}

@media January {
  .c0 {
    page: April;
  }
}

@media April {
  .c0 {
    page: May;
  }
}

@media June {
  .c0 {
    page: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page: January;
  }
}

@media April {
  .c0 {
    page: December;
  }
}

@media January {
  .c0 {
    page: April;
  }
}

@media April {
  .c0 {
    page: May;
  }
}

@media June {
  .c0 {
    page: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`page renders postitive number 1`] = `
Array [
  .c0 {
  page: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  page: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`page renders string 1`] = `
Array [
  .c0 {
  page: July;
}

<div
    className="c0"
  />,
  .c0 {
  page: July;
}

<div
    className="c0"
  />,
  .c0 {
  page: June;
}

<div
    className="c0"
  />,
  .c0 {
  page: June;
}

<div
    className="c0"
  />,
]
`;

exports[`page renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`page renders valid theme path 1`] = `
Array [
  .c0 {
  page: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
